Your commit message

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <section class="imagec" data-genre="thriller">
     <div class="image-container">
         <div class="image-box">
-            <img src="css/Alternative poster Mulholland drive.jpg" alt="Mulholland Drive movie poster">
+            <img src="css/mul3.jpg" alt="Mulholland Drive movie poster">
             <div class="title-overlay">Mulholland Drive</div>
         </div>
         <div class="image-box">
@@ -150,7 +150,7 @@
             <div class="title-overlay">Fight Club</div>
         </div>
         <div class="image-box">
-            <img src="css/all of us strangers.jpg" alt="All of Us Strangers movie poster">
+            <img src="css/allstrangers.jpg" alt="All of Us Strangers movie poster">
             <div class="title-overlay">All of Us Strangers</div>
         </div>
         <div class="image-box">
@@ -495,7 +495,7 @@
 <section class="imagec" data-genre="Sci-Fi">
     <div class="image-container">
         <div class="image-box">
-            <img src="css/dune.jpg" alt="Dune movie poster">
+            <img src="css/PLESAD.jpg" alt="Dune movie poster">
             <div class="title-overlay">Dune</div>
         </div>
         <div class="image-box">
@@ -911,8 +911,8 @@
             <div class="title-overlay">Le Mans '66</div>
         </div>
         <div class="image-box">
-            <img src="css/all of us strangers.jpg" alt="Image from All of Us Strangers movie">
-            <div class="title-overlay">All of Us Strangers</div>
+            <img src="css/Pulp Fiction.jpg" alt="Image from All of Us Strangers movie">
+            <div class="title-overlay">Pulp Fiction</div>
         </div>
         <div class="image-box">
             <img src="css/lion.jpg" alt="Image from Lion movie">
@@ -922,7 +922,7 @@
     <div class="paragraphs">
         <p>A drama musical where two aspiring artists in Hollywood impact each other's lives. Director: Damian Chazelle.</p>
         <p>Bale and Damon have believable chemistry in this real-life exhilarating tale about race car driving. Director: James Mangold.</p>
-        <p>This beautiful story with a sci-fi twist will affect viewers in different ways. Director: Andrew Haigh.</p>
+        <p>Acting, writing and style is why this is a favourite of so many. Director: Quentin Tarantino.</p>
         <p>A passionate real-life look at a boy named Saroo, who gets separated from his family at the age of five and ends up being adopted by an Australian couple. Director: Garth Davis.</p>
     </div>
 </section>
